--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
+                <div class="menu-text">МЕНЮ</div>
             </a>
 
             <a class="navbar-brand link" href="index.html.html">
@@ -136,8 +137,8 @@
                         <div class="col-12 col-lg-4 d-flex align-items-center">
                             <div class="side-footer text-white w-100">
                                 <div class="menu-company-details">
-                                    <span>+1 631 123 4567</span>
-                                    <span>noreply@crystalsea.ru</span>
+                                    <span><a href="tel:89958989016">8 (995) 898-90-16</a></span>
+                                    <span><a href="mailto:requestcrystalsea@yandex.ru">noreply@crystalsea.ru</a></span>
                                 </div>
                                 <ul class="social-icons-simple">
                                     <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
@@ -745,9 +746,9 @@
                     <div class="contact-details wow fadeInRight">
                         <ul>
                             <li><i class="las la-phone-volume phone color-yellow"></i>
-                                <span><a>+1 631 1234 5678</a></span>
+                                <span><a href="tel:89958989016">8 (995) 898-90-16</a></span>
                             </li>
-                            <li><i class="las la-paper-plane email color-green"></i>noreply@crystalsea.ru</li>
+                            <li><i class="las la-paper-plane email color-green"></i><a href="mailto:requestcrystalsea@yandex.ru">noreply@crystalsea.ru</a></li>
                         </ul>
                     </div>
                     <img src="design-agency/img/contact-background.png" class="contact-background" alt="contact">
