--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                         <div class="col-12 col-lg-4 d-flex align-items-center">
                             <div class="side-footer text-white w-100">
                                 <div class="menu-company-details">
-                                    <span><a href="tel:89958989016">8 (995) 898-90-16</a></span>
+                                    <span><a href="tel:+79958989016">8 (995) 898-90-16</a></span>
                                     <span><a href="mailto:requestcrystalsea@yandex.ru">noreply@crystalsea.ru</a></span>
                                 </div>
                                 <ul class="social-icons-simple">
-                                    <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
-                                    <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
-                                    <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
+                                    <li><a class="wow fadeInUp" href="https://t.me/Kapibarra2315"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
+                                    <li><a class="wow fadeInDown" href="https://wa.me/79991573044?text=Здравствуйте%20!%20Хочу%20заказать%20обслуживание%20аквариума!"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
+                                    <li><a class="wow fadeInUp" href="viber://chat?number=+79991573044"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
                                 </ul>
                                 <a class="text-white" href="https://madstack.ru">&copy; 2021 Made With Love by MadStack</a>
                             </div>
@@ -601,9 +601,9 @@
                     </a>
                         <div class="footer-social text-center text-lg-left ">
                             <ul class="list-unstyled">
-                                <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
-                                <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
-                                <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
+                                <li><a class="wow fadeInUp" href="https://t.me/Kapibarra2315"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
+                                <li><a class="wow fadeInDown" href="https://wa.me/79991573044?text=Здравствуйте%20!%20Хочу%20заказать%20обслуживание%20аквариума!"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
+                                <li><a class="wow fadeInUp" href="viber://chat?number=+79991573044"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
                             </ul>
                         </div>
 
@@ -746,7 +746,7 @@
                     <div class="contact-details wow fadeInRight">
                         <ul>
                             <li><i class="las la-phone-volume phone color-yellow"></i>
-                                <span><a href="tel:89958989016">8 (995) 898-90-16</a></span>
+                                <span><a href="tel:+79958989016">8 (995) 898-90-16</a></span>
                             </li>
                             <li><i class="las la-paper-plane email color-green"></i><a href="mailto:requestcrystalsea@yandex.ru">noreply@crystalsea.ru</a></li>
                         </ul>
@@ -767,9 +767,9 @@
                 <div class="col-12 col-lg-6 text-center text-lg-left order-2 order-lg-1">
                     <div class="footer-social text-center text-lg-left ">
                         <ul class="list-unstyled">
-                            <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
-                            <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
-                            <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
+                            <li><a class="wow fadeInUp" href="https://t.me/Kapibarra2315"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
+                            <li><a class="wow fadeInDown" href="https://wa.me/79991573044?text=Здравствуйте%20!%20Хочу%20заказать%20обслуживание%20аквариума!"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
+                            <li><a class="wow fadeInUp" href="viber://chat?number=+79991573044"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
                         </ul>
                     </div>
                     <p class="company-about fadeIn mt-3 mt-lg-5"><a href="https://madstack.ru">&copy; 2021 Made With Love by MadStack</a>
