--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="russian">
+    <meta name="yandex-verification" content="799f3f86c92a6c77" />
     <meta property="og:title" content="Crystal Sea - обслуживание домашних и офисных аквариумов">
     <meta property="og:site_name" content="Crystal Sea">
     <meta property="og:url" content="index.html">
