--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     <!-- Bundle -->
     <link href="vendor/css/bundle.min.css" rel="stylesheet">
     <!-- Plugin Css -->
-    <link href="design-agency/css/line-awesome.min.css" rel="stylesheet">
+    <link href="source/css/line-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/revolution-settings.min.css" rel="stylesheet">
     <link href="vendor/css/jquery.fancybox.min.css" rel="stylesheet">
     <link href="vendor/css/owl.carousel.min.css" rel="stylesheet">
     <link href="vendor/css/cubeportfolio.min.css" rel="stylesheet">
     <link href="vendor/css/LineIcons.min.css" rel="stylesheet">
-    <link href="design-agency/css/slick.css" rel="stylesheet">
-    <link href="design-agency/css/slick-theme.css" rel="stylesheet">
+    <link href="source/css/slick.css" rel="stylesheet">
+    <link href="source/css/slick-theme.css" rel="stylesheet">
     <link href="vendor/css/wow.css" rel="stylesheet">
     <!-- Style Sheet -->
-    <link href="design-agency/css/blog.css" rel="stylesheet">
-    <link href="design-agency/css/style.css" rel="stylesheet">
+    <link href="source/css/blog.css" rel="stylesheet">
+    <link href="source/css/style.css" rel="stylesheet">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m, e, t, r, i, k, a) {
@@ -101,7 +101,7 @@
             </a>
 
             <a class="navbar-brand link" href="index.html.html">
-                <img src="design-agency/img/logo-white-small.png" class="logo" alt="logo">
+                <img src="source/img/logo-white-small.png" class="logo" alt="logo">
             </a>
         </div>
         <!--Side Nav-->
@@ -112,7 +112,7 @@
                 <div class="container">
                     <div class="row w-100 side-menu-inner-content">
                         <div class="col-12 d-flex justify-content-center align-items-center">
-                            <a href="index.html" class="navbar-brand"><img src="design-agency/img/logo-white.png" alt="logo"></a>
+                            <a href="index.html" class="navbar-brand"><img src="source/img/logo-white.png" alt="logo"></a>
                         </div>
                         <div class="col-12 col-lg-8">
                             <nav class="side-nav w-100">
@@ -166,7 +166,7 @@
                     <div class="container">
                         <div class="detail-text">
                             <div class="inner-content position-relative text-center" data-depth="0.05">
-                                <h4 class="heading">CrystalSea<span><a href="index.html" class="navbar-brand"><img src="design-agency/img/logo-white-small.png" alt="logo"></a></span>
+                                <h4 class="heading">CrystalSea<span><a href="index.html" class="navbar-brand"><img src="source/img/logo-white-small.png" alt="logo"></a></span>
 
                                 </h4>
                                 <div class="main-ring">
@@ -176,8 +176,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="slider-object1"><img src="design-agency/img/slider-object1.png"></div>
-                <div class="slider-object2"><img src="design-agency/img/slider-object2.png"></div>
+                <div class="slider-object1"><img src="source/img/slider-object1.png"></div>
+                <div class="slider-object2"><img src="source/img/slider-object2.png"></div>
             </div>
             <div class="col-12 col-lg-6 banner-right-area wow slideInRight" data-wow-delay=".8s">
                 <div class="row no-gutters">
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                         <div class="img-object wow slideInUp" data-wow-delay="1.8s">
-                            <img src="design-agency/img/slider-object3.png">
+                            <img src="source/img/slider-object3.png">
                         </div>
                     </div>
                     <div class="col-12 bg-green height-50 d-flex align-items-center slider-right-box">
@@ -208,7 +208,7 @@
                             </div>
                         </div>
                         <div class="img-object right wow slideInRight" data-wow-delay="1.8s">
-                            <img src="design-agency/img/slider-object4.png">
+                            <img src="source/img/slider-object4.png">
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="col-12 col-lg-5 d-flex justify-content-end">
                     <div class="plant-img">
-                        <img src="design-agency/img/plant.png" class="wow slideInRight" alt="img" data-wow-delay=".5s">
+                        <img src="source/img/plant.png" class="wow slideInRight" alt="img" data-wow-delay=".5s">
                     </div>
                 </div>
             </div>
@@ -361,12 +361,12 @@
                     <div id="team-carousal" class="owl-carousel owl-theme team-owl mt-100 text-center">
                         <div class="item">
                             <div class="team-img">
-                                <img src="design-agency/img/team1.png" alt="img">
+                                <img src="source/img/team1.png" alt="img">
                             </div>
                             <div class="team-tittle text-left mt-3 mb-3">
                                 <div class="name-img">
-                                    <img src="design-agency/img/team-bg1.png" alt="img">
-                                    <img src="design-agency/img/team-bg-hvr.png" class="black-img" alt="img">
+                                    <img src="source/img/team-bg1.png" alt="img">
+                                    <img src="source/img/team-bg-hvr.png" class="black-img" alt="img">
                                     <h3 class="name mb-0">Alex Stoke</h3>
                                 </div>
                                 <p class="sub-heading mb-0 mt-1 text-center text-black">Director</p>
@@ -379,12 +379,12 @@
                         </div>
                         <div class="item">
                             <div class="team-img mt-20">
-                                <img src="design-agency/img/team2.png" alt="img">
+                                <img src="source/img/team2.png" alt="img">
                             </div>
                             <div class="team-tittle text-left mt-3 mb-3">
                                 <div class="name-img">
-                                    <img src="design-agency/img/team-bg2.png" alt="img">
-                                    <img src="design-agency/img/team-bg-hvr.png" class="black-img" alt="img">
+                                    <img src="source/img/team-bg2.png" alt="img">
+                                    <img src="source/img/team-bg-hvr.png" class="black-img" alt="img">
                                     <h3 class="name mb-0">Lisa Waren</h3>
                                 </div>
                                 <p class="sub-heading mb-0 mt-1 text-center text-black">Manager</p>
@@ -397,12 +397,12 @@
                         </div>
                         <div class="item">
                             <div class="team-img mt-20">
-                                <img src="design-agency/img/team3.png" alt="img">
+                                <img src="source/img/team3.png" alt="img">
                             </div>
                             <div class="team-tittle text-left mt-3 mb-3">
                                 <div class="name-img">
-                                    <img src="design-agency/img/team-bg3.png" alt="img">
-                                    <img src="design-agency/img/team-bg-hvr.png" class="black-img" alt="img">
+                                    <img src="source/img/team-bg3.png" alt="img">
+                                    <img src="source/img/team-bg-hvr.png" class="black-img" alt="img">
                                     <h3 class="name mb-0">Lisa Waren</h3>
                                 </div>
                                 <p class="sub-heading mb-0 mt-1 text-center text-black">Designer</p>
@@ -438,25 +438,25 @@
                     <div class="portfolio-carousel owl-carousel owl-item">
                         <div class="item">
                             <div class="portfolio-image">
-                                <img src="design-agency/img/p1.png">
+                                <img src="source/img/p1.png">
                             </div>
 
                         </div>
                         <div class="item">
                             <div class="portfolio-image">
-                                <img src="design-agency/img/p2.png">
+                                <img src="source/img/p2.png">
                             </div>
 
                         </div>
                         <div class="item">
                             <div class="portfolio-image">
-                                <img src="design-agency/img/p3.png">
+                                <img src="source/img/p3.png">
                             </div>
 
                         </div>
                         <div class="item">
                             <div class="portfolio-image">
-                                <img src="design-agency/img/p4.png">
+                                <img src="source/img/p4.png">
                             </div>
 
                         </div>
@@ -590,14 +590,14 @@
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <div class="blog-img wow fadeInLeft">
-                        <img src="design-agency/img/blog-mokeup.png">
+                        <img src="source/img/blog-mokeup.png">
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0 text-center text-lg-left">
                     <div class="blog-detail wow fadeInRight">
                         <h4 class="heading">Скидка 10% на первый заказ</h4>
                         <p class="text">Закажите Сейчас, по телефону или в любом удобном для Вас мессенджере!</p>
-                        <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="design-agency/standalone.html">Позвонить
+                        <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="source/standalone.html">Позвонить
                         <span></span><span></span><span></span><span></span>
                     </a>
                         <div class="footer-social text-center text-lg-left ">
@@ -631,7 +631,7 @@
                                         Приятные впечатления от работы, чувствуется знания и опыт, а главное- не равнодушное отношение. Предложили помощь в интерьере аквариума. Рыбки остались очень довольны! Цена и качество понравились, поэтому заключили долговременный договор. Рекомендую!
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test1.png">
+                                        <img src="source/img/test1.png">
                                     </div>
                                     <h4 class="user-name">Елена Сапаева</h4>
                                 </div>
@@ -643,7 +643,7 @@
                                         Хотели небольшой аквариум для ребенка в его комнату, обратились в кристал си , ребята помогли с выбором аквариума, все подключили и оформили его, подсказали где лучше купить рыб и декорации, заключили договор на обслуживание.
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test2.png">
+                                        <img src="source/img/test2.png">
                                     </div>
                                     <h4 class="user-name">Роман И.</h4>
                                 </div>
@@ -655,7 +655,7 @@
                                         Заказывала разовую чистку аквариума, работник был на месте уже через час. Работа заняла от силы час с небольшим, аквариум 210л. Буду обращаться еще.
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test2.png">
+                                        <img src="source/img/test2.png">
                                     </div>
                                     <h4 class="user-name">Марина Е.</h4>
                                 </div>
@@ -667,7 +667,7 @@
                                         Сломался светильник в аквариуме, приехал специалист , забрал светильник - через 2 дня привез рабочий обратно. всем доволен.
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test2.png">
+                                        <img src="source/img/test2.png">
                                     </div>
                                     <h4 class="user-name">Евгений П.</h4>
                                 </div>
@@ -696,22 +696,22 @@
                 <div class="col-12">
                     <div class="sponser-tags owl-carousel owl-theme">
                         <div class="item">
-                            <img src="design-agency/img/brand1.png">
+                            <img src="source/img/brand1.png">
                         </div>
                         <div class="item">
-                            <img src="design-agency/img/brand2.png">
+                            <img src="source/img/brand2.png">
                         </div>
                         <div class="item">
-                            <img src="design-agency/img/brand3.png">
+                            <img src="source/img/brand3.png">
                         </div>
                         <div class="item">
-                            <img src="design-agency/img/brand4.png">
+                            <img src="source/img/brand4.png">
                         </div>
                         <div class="item">
-                            <img src="design-agency/img/brand5.png">
+                            <img src="source/img/brand5.png">
                         </div>
                         <div class="item">
-                            <img src="design-agency/img/brand6.png">
+                            <img src="source/img/brand6.png">
                         </div>
                     </div>
                 </div>
@@ -752,7 +752,7 @@
                             <li><i class="las la-paper-plane email color-green"></i><a href="mailto:requestcrystalsea@yandex.ru">noreply@crystalsea.ru</a></li>
                         </ul>
                     </div>
-                    <img src="design-agency/img/contact-background.png" class="contact-background" alt="contact">
+                    <img src="source/img/contact-background.png" class="contact-background" alt="contact">
                 </div>
             </div>
         </div>
@@ -779,7 +779,7 @@
                 <!--Text-->
                 <div class="col-12 col-lg-6 text-center order-1 order-lg-2">
                     <div class="contact-pot">
-                        <img src="design-agency/img/contact-pot.png" class="wow slideInRight" data-wow-delay=".5" alt="contact-pot">
+                        <img src="source/img/contact-pot.png" class="wow slideInRight" data-wow-delay=".5" alt="contact-pot">
                     </div>
                 </div>
             </div>
@@ -812,9 +812,9 @@
     <!--Tilt Js-->
     <script src="vendor/js/TweenMax.min.js"></script>
     <!-- custom script-->
-    <script src="design-agency/js/circle-progress.min.js"></script>
+    <script src="source/js/circle-progress.min.js"></script>
     <script src="vendor/js/contact_us.js"></script>
-    <script src="design-agency/js/script.js"></script>
+    <script src="source/js/script.js"></script>
 
 </body>
 
