--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                     <div class="blog-detail wow fadeInRight">
                         <h4 class="heading">Скидка 10% на первый заказ</h4>
                         <p class="text">Закажите Сейчас, по телефону или в любом удобном для Вас мессенджере!</p>
-                        <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="source/standalone.html">Позвонить
+                        <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="tel:+79958989016">Позвонить
                         <span></span><span></span><span></span><span></span>
                     </a>
                         <div class="footer-social text-center text-lg-left ">
