--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="russian">
     <meta name="yandex-verification" content="799f3f86c92a6c77" />
-    <meta property="og:title" content="Crystal Sea - обслуживание домашних и офисных аквариумов">
+    <meta property="og:title" content="Crystal Sea - Обслуживание Домашних и Офисных Аквариумов">
     <meta property="og:site_name" content="Crystal Sea">
     <meta property="og:url" content="index.html">
     <meta property="og:description" content="Aqualounge - обслуживание морских и пресноводных аквариумов в Москве, Московской области , Санкт петербурге и Ленинградской области.">
-    <meta property="og:image" content="https://sun9-12.userapi.com/impg/4IzhuegJCmwJtNPmHhU2SL5XSPeQTcIPdb7xLQ/d6E3sMrcbSE.jpg?size=1200x767&quality=96&sign=509ba8671eb89a65f8e260c121507a54&type=album">
+    <meta property="og:image" content="https://sun9-14.userapi.com/impg/Mnrrn0Dnr8MkZ3aWDTZ1PDIQRFsZnudrten4Jg/elLVuZSRx1s.jpg?size=1200x628&quality=96&sign=c97c4819a3d13768e84f0bb5b399acf1&type=album">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
