--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                             <input type="phone" name="userPhone" placeholder="Ваш телефон" class="form-control">
                         </div>
                         <div class="col-12 col-md-7">
-                            <textarea class="form-control" name="userMessage" rows="6">Ваше сообщение</textarea>
+                            <textarea class="form-control" name="userMessage" rows="6" placeholder="Ваше сообщение"></textarea>
                         </div>
                         <div class="col-12">
                             <a href="javascript:void(0);" class="btn green-btn btn-hvr btn-hvr-blue rounded-pill w-100 contact_btn"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i>Отправить Заявку
