--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="container">
             <div class="row portfolio-heading-area text-center text-lg-left">
                 <div class="col-6 col-md-10 offset-md-1 col-lg-5 offset-lg-0">
-                    <h4 class="heading wow fadeInLeft">Наши <span>Последние Работы</span></h4>
+                    <h4 class="heading wow fadeInLeft" style="width: 275px; text-align: left;">Наши Последние Работы</h4>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
                     <p class="text wow fadeInRight">
