--- a/index.html
+++ b/index.html
@@ -487,20 +487,18 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-green">1700</h4>
+                                <h4 class="pricing-price color-green">От 1790</h4>
                                 <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text" style="text-decoration: line-through;">Cтарая цена: от 2000₽</p>
                                 <p class="sub-text">Разовое обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Цена указана для 100л</li>
-                                <li>+ 500 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
                                 <li>Чистка аквариума</li>
-
                                 <li>Цена на "Море" + 10%</li>
                             </ul>
                         </div>
@@ -511,20 +509,18 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-yellow">3100</h4>
+                                <h4 class="pricing-price color-yellow">От 3100</h4>
                                 <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text" style="text-decoration: line-through;">Cтарая цена: от 3500₽</p>
                                 <p class="sub-text">2х Разовое Обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Цена указана для 100л</li>
-                                <li>+ 600 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
                                 <li>Чистка аквариума</li>
-
                                 <li>Цена на "Море" + 10%</li>
                             </ul>
                         </div>
@@ -535,16 +531,15 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-blue">4400</h4>
+                                <h4 class="pricing-price color-blue">От 4400</h4>
                                 <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text" style="text-decoration: line-through;">Cтарая цена: от 5000₽</p>
                                 <p class="sub-text">3х Разовое Обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Цена указана для 100л</li>
-                                <li>+ 600 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
                                 <li>Чистка аквариума</li>
@@ -559,16 +554,15 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-green">5600</h4>
+                                <h4 class="pricing-price color-green">От 5600</h4>
                                 <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text" style="text-decoration: line-through;">Cтарая цена: от 6200₽</p>
                                 <p class="sub-text">4х Разовое Обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Цена указана для 100л</li>
-                                <li>+ 800 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
                                 <li>Чистка аквариума</li>
